--- a/scss/blocks/video-block.scss
+++ b/scss/blocks/video-block.scss
@@ -64,3 +64,12 @@
   width: auto;
   height: 300px;
 }
+
+.video-block-selected-container {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #333;
+  border-radius: 5px;
+  width: 100%;
+  padding: 1rem;
+}
