--- a/scss/blocks/video-block.scss
+++ b/scss/blocks/video-block.scss
@@ -32,6 +32,7 @@
   border-radius: 4px;
   border: 1px solid #7e8993;
   flex: 1;
+  margin-right: 8px;
 }
 
 .video-block-text {
@@ -50,14 +51,21 @@
 }
 
 .video-block-suggestions-container {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 0;
 }
 
 .video-block-suggestions-wrapper {
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
+  justify-content: center;
+  border: 1px solid #333;
+  border-radius: 3px;
+  padding: 5px;
 }
 
 .video-block-suggestions-image {
@@ -72,4 +80,41 @@
   border-radius: 5px;
   width: 100%;
   padding: 1rem;
+}
+
+.video-block-button {
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+  background: #f1f1f1;
+  border-color: #005d8c;
+  color: #005d8c;
+  text-decoration: none;
+  height: 30px;
+  line-height: 28px;
+  padding: 0 12px 2px;
+  border-radius: 3px;
+  white-space: nowrap;
+  border-width: 1px;
+  border-style: solid;
+  display: inline-flex;
+  font-size: 13px;
+  margin: 0;
+}
+
+.video-block-selected-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.video-block-icon-close-wrapper {
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: #ff0000;
+  padding: 3px 8px 8px;
+}
+
+.video-block-icon-close {
+  font-size: 2.5rem;
+  color: #fff;
+  margin-right: 18px;
 }
