--- a/scss/_admin.scss
+++ b/scss/_admin.scss
@@ -18,3 +18,11 @@
 #video-publisher-thumbnail {
   width: 60px;
 }
+
+.video-publisher-admin {
+  .login-box {
+    border: 1px gray solid;
+    padding: 10px;
+    font-size: 1.2em;
+  }
+}
