--- a/plugin/views/admin/input.html.twig
+++ b/plugin/views/admin/input.html.twig
@@ -1,1 +1,9 @@
-<input type="text" id="{{ name }}" name="isset-video-publisher-options[{{ name }}]" value="{{ value }}" class="large-text" />
+{% if type == 'text' %}
+    <input type="text" id="{{ name }}" name="isset-video-publisher-options[{{ name }}]" value="{{ value }}"
+           class="large-text"/>
+{% elseif type == 'checkbox' %}
+    <input type="checkbox" id="{{ name }}" name="isset-video-publisher-options[{{ name }}]"
+            {{ extra.checked ? "checked" }} value="{{ value }}"/> {{ extra.postfix }}
+{% else %}
+    Unsupported type
+{% endif %}
