--- a/scss/blocks/video-block.scss
+++ b/scss/blocks/video-block.scss
@@ -3,7 +3,7 @@
   min-height: 200px;
   width: 100%;
   text-align: center;
-  background: rgba(139,139,150,.1);
+  background: rgba(139, 139, 150, .1);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,7 +25,7 @@
 }
 
 .video-block-input {
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
   padding: 6px 8px;
   box-shadow: 0 0 0 transparent;
   transition: box-shadow .1s linear;
@@ -80,7 +80,7 @@
 }
 
 .video-block-button {
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
   background: #f1f1f1;
   border-color: #005d8c;
   color: #005d8c;
@@ -114,4 +114,16 @@
   font-size: 2.5rem;
   color: #fff;
   margin-right: 18px;
+}
+
+.video-block-play-button {
+  position: absolute;
+  left: 50%;
+  top: 42%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  font: 400 50px/45px dashicons;
+  content: "\f522";
+  color: #fff;
+  opacity: .8;
 }
