--- a/scss/_admin.scss
+++ b/scss/_admin.scss
@@ -20,9 +20,38 @@
 }
 
 .video-publisher-admin {
-  .login-box {
-    border: 1px gray solid;
-    padding: 10px;
-    font-size: 1.2em;
+  .btn {
+    display: inline-block;
+    cursor: pointer;
+    user-select: none;
+    padding: 0.375rem 0.75rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    text-decoration: none;
+    color: #fff;
+    background-color: #4638c2;
+    border-color: #4638c2;
+  }
+
+  .btn-danger {
+    background-color: #d16767;
+    border-color: #d16767;
+  }
+
+  p.submit {
+    margin-top: 0;
+    padding-bottom: 0;
+
+    input[type=submit] {
+      background-color: #4638c2;
+      padding: 0.1rem 0.75rem;
+      border-radius: 0.25rem;
+    }
+  }
+
+  .mt-20 {
+    margin-top: 20px;
   }
 }
+
