--- a/plugin/views/admin/upload.html.twig
+++ b/plugin/views/admin/upload.html.twig
@@ -6,18 +6,25 @@
     </h1>
 </div>
 
-<div class="upload-container">
-    <div class="phase-select">
-        <input type="file">
-        <button>Upload</button>
-    </div>
-    <div class="phase-upload">
-        <div class="progress">
-            <div class="bar"></div>
-            <div class="indicator"></div>
+<div class="card">
+    <div class="upload-container">
+        <div class="phase-select">
+            <div class="phase-select-dropzone">
+                <input type="file">
+                <p>Drag your file here or click in this area.</p>
+            </div>
+            <button class="btn">Upload</button>
+            <span id="phase-select-file"></span>
         </div>
-    </div>
-    <div class="phase-done">
+        <div class="phase-upload">
+            Uploading:
+            <div class="indicator"></div>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 0;"></div>
+            </div>
+        </div>
+        <div class="phase-done">
 
+        </div>
     </div>
 </div>
