--- a/scss/upload.scss
+++ b/scss/upload.scss
@@ -1,13 +1,74 @@
 .phase-upload {
   display: none;
 
-  .bar {
-    background: red;
-    width: 0;
-    height: 30px;
+  .progress {
+    margin-top: 10px;
+    display: flex;
+    height: 1.5rem;
+    overflow: hidden;
+    font-size: .65625rem;
+    border-radius: .25rem;
+    background-color: #c3c5c7;
+
+    .progress-bar {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      overflow: hidden;
+      text-align: center;
+      white-space: nowrap;
+      transition: width .6s ease;
+      color: #fff;
+      background-color: #45a164;
+    }
+  }
+
+  .indicator {
+    display: inline-block;;
   }
 }
 
 .phase-done {
   display: none;
+}
+
+.phase-select {
+  .btn {
+    display: inline-block;
+    cursor: pointer;
+    user-select: none;
+    padding: 0.375rem 0.75rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    text-decoration: none;
+    color: #fff;
+    background-color: #45a164;
+    border-color: #45a164;
+    margin-right: 8px;
+  }
+
+  .phase-select-dropzone {
+    margin: 20px 0;
+    height: 200px;
+    border: 4px dashed #a5a5a5;
+    position: relative;
+
+    p {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      line-height: 170px;
+    }
+
+    input {
+      position: absolute;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      outline: none;
+      opacity: 0;
+    }
+  }
 }
