--- a/plugin/views/admin/upload.html.twig
+++ b/plugin/views/admin/upload.html.twig
@@ -10,7 +10,7 @@
     <div class="upload-container">
         <div class="phase-select">
             <div class="phase-select-dropzone">
-                <input type="file">
+                <input accept="video/*" type="file">
                 <p>Drag your file here or click in this area.</p>
             </div>
             <button class="btn">Upload</button>
