--- a/plugin/views/admin/preview.html.twig
+++ b/plugin/views/admin/preview.html.twig
@@ -3,4 +3,6 @@
 {{ publish_shortcode|shortcodes }}
 <hr>
 {{ _e('Use this shortcode in a post to include the video.', 'isset-video-publisher') }}
-<br><br><code>{{ publish_shortcode }}</code>
+<br><br><code id="shortCodeBox">{{ publish_shortcode }}</code>
+<input style="display: none" value="{{ publish_shortcode }}" id="shortCodeBoxInput" />
+<br><br><span id="shortCodeAlert" style="display: none">{{ _e('Copied shortcode', 'isset-video-publisher') }}</span>
