--- a/scss/_video.scss
+++ b/scss/_video.scss
@@ -22,6 +22,8 @@
     width: 100%;
     border: 0;
   }
+
+
 }
 
 // Modifier class for 16:9 aspect ratio
@@ -41,4 +43,12 @@
       white-space: nowrap;
     }
   }
+}
+
+.video-publisher-deleted-video {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 300px;
+  background-color: rgba(1, 1, 1, 0.1);
 }
