--- a/scss/_video.scss
+++ b/scss/_video.scss
@@ -52,3 +52,9 @@
   min-height: 300px;
   background-color: rgba(1, 1, 1, 0.1);
 }
+
+.video-player {
+  position: relative !important;
+  width: auto !important;
+  height: 100% !important;
+}
