--- a/plugin/views/metabox/publish-info.html.twig
+++ b/plugin/views/metabox/publish-info.html.twig
@@ -1,3 +1,6 @@
 <div>
-    <span><b>{{ __('Size', 'isset-video-publisher') }}: </b>{{ (size / 1e+9) | round(3) }} GB</span>
+    <span><b>{{ __('Size', 'isset-video-publisher') }}: </b>{{ (size / 1e+9) | round(3) }} GB</span><br/>
+    {% if meta %}
+        <span><b>{{ __('Duration', 'isset-video-publisher') }}: </b>{{ duration }}</span>
+    {% endif %}
 </div>
