--- a/plugin/views/shortcode/publish.html.twig
+++ b/plugin/views/shortcode/publish.html.twig
@@ -1,7 +1,7 @@
 {% if video_url %}
 
-    <div class="video-publisher-video video-publisher-video-16by9">
-        <video {{ controls }} {{ autoplay }} {{ loop }} {{ muted }}
+    <div class="video-publisher-video video-player">
+        <video id="isset-video-default" {{ controls }} {{ autoplay }} {{ loop }} {{ muted }}
                 poster="{{ poster }}" preload="auto" class="video-js vjs-big-play-centered vjs-default-skin"
                 data-setup="{{ video_setup|json_encode|escape }}">
             <source src="{{ video_url|escape }}" type="application/x-mpegURL">
