--- a/scss/blocks/video-block.scss
+++ b/scss/blocks/video-block.scss
@@ -99,7 +99,7 @@
 .video-block-selected-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .video-block-icon-close-wrapper {
