Changes discussed with rommert

--- a/plugin/views/admin/upload.html.twig
+++ b/plugin/views/admin/upload.html.twig
@@ -11,7 +11,12 @@
         <div class="phase-select">
             <div class="phase-select-dropzone">
                 <input accept="video/*" type="file">
-                <p>Drag your file here or click in this area.</p>
+                <div class="text-wrapper">
+                    <span class="dashicons dashicons-download download-icon"></span>
+                </div>
+                <div class="text-wrapper">
+                    <p>Drop a single file here (4.3GB max) or <u><b>browse</b></u> your computer.</p>
+                </div>
             </div>
             <button class="btn">Upload</button>
             <span id="phase-select-file"></span>
