--- a/scss/upload.scss
+++ b/scss/upload.scss
@@ -49,16 +49,34 @@
   }
 
   .phase-select-dropzone {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
     margin: 20px 0;
     height: 200px;
-    border: 4px dashed #a5a5a5;
+    border: 2px dashed #a5a5a5;
+    border-radius: 7px;
+    background-color: #f1f1f1;
     position: relative;
 
-    p {
+    .text-wrapper {
       width: 100%;
-      height: 100%;
       text-align: center;
-      line-height: 170px;
+
+      p {
+        width: 100%;
+        height: 100%;
+        text-align: center;
+      }
+
+      .download-icon {
+        height: 3.75rem;
+        width: 3.75rem;
+        font-size: 3.75rem;
+        margin-bottom: 0.75rem;
+      }
     }
 
     input {
