--- a/plugin/views/admin/upload.html.twig
+++ b/plugin/views/admin/upload.html.twig
@@ -6,30 +6,38 @@
     </h1>
 </div>
 
-<div class="card">
-    <div class="upload-container">
-        <div class="phase-select">
-            <div class="phase-select-dropzone">
-                <input accept="video/*" type="file">
-                <div class="text-wrapper">
-                    <span class="dashicons dashicons-download download-icon"></span>
+{% if uploading_allowed %}
+    <div class="card">
+        <div class="upload-container">
+            <div class="phase-select">
+                <div class="phase-select-dropzone">
+                    <input accept="video/*" type="file">
+                    <div class="text-wrapper">
+                        <span class="dashicons dashicons-download download-icon"></span>
+                    </div>
+                    <div class="text-wrapper">
+                        <p>Drop a single file here (4.3GB max) or <u><b>browse</b></u> your computer.</p>
+                    </div>
                 </div>
-                <div class="text-wrapper">
-                    <p>Drop a single file here (4.3GB max) or <u><b>browse</b></u> your computer.</p>
+                <button class="btn">Upload</button>
+                <span id="phase-select-file"></span>
+            </div>
+            <div class="phase-upload">
+                Uploading:
+                <div class="indicator"></div>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 0;"></div>
                 </div>
             </div>
-            <button class="btn">Upload</button>
-            <span id="phase-select-file"></span>
-        </div>
-        <div class="phase-upload">
-            Uploading:
-            <div class="indicator"></div>
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 0;"></div>
-            </div>
-        </div>
-        <div class="phase-done">
+            <div class="phase-done">
 
+            </div>
         </div>
     </div>
-</div>
+{% else %}
+    <div class="card">
+        <div class="text-wrapper">
+            <p>Storage limit is already reached, please remove video's to upload again.</p>
+        </div>
+    </div>
+{% endif %}
