--- a/scss/upload.scss
+++ b/scss/upload.scss
@@ -1,6 +1,25 @@
 .phase-upload {
   display: none;
 
+  .uploading-text {
+    margin: 10px 8px 10px 0;
+  }
+
+  .btn {
+    display: inline-block;
+    cursor: pointer;
+    user-select: none;
+    padding: 0.375rem 0.75rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    text-decoration: none;
+    color: #fff;
+    background-color: #45a164;
+    border-color: #45a164;
+    margin-right: 8px;
+  }
+
   .progress {
     margin-top: 10px;
     display: flex;
