Added few ux points

--- a/plugin/views/admin/upload.html.twig
+++ b/plugin/views/admin/upload.html.twig
@@ -11,7 +11,7 @@
         <div class="upload-container">
             <div class="phase-select">
                 <div class="phase-select-dropzone">
-                    <input accept="video/*" type="file">
+                    <input accept="video/mp4,video/x-m4v,video/*" type="file">
                     <div class="text-wrapper">
                         <span class="dashicons dashicons-download download-icon"></span>
                     </div>
