--- a/plugin/views/admin/thumbnail-column.html.twig
+++ b/plugin/views/admin/thumbnail-column.html.twig
@@ -1,1 +1,4 @@
-<img class="attachment-60x60 size-60x60" src="{{ poster }}" width="60" height="60" />
+<div class="video-publisher-flex">
+    <img class="attachment-60x60 size-60x60" src="{{ poster }}" width="60" height="60" />
+    <span class="video-publisher-ml-2">{{ duration }}</span>
+</div>
