--- a/plugin/views/admin/upload.html.twig
+++ b/plugin/views/admin/upload.html.twig
@@ -36,6 +36,7 @@
             </div>
         </div>
     </div>
+    <canvas width=32 height=32 style="display: none;"></canvas>
 {% else %}
     <div class="card">
         <div class="text-wrapper">
