--- a/plugin/views/admin/thumbnail-column.html.twig
+++ b/plugin/views/admin/thumbnail-column.html.twig
@@ -1,9 +1,4 @@
 <div class="video-publisher-flex">
-    <img class="attachment-60x60 size-60x60 video-publisher-thumbnail-stills" src="{{ poster }}" width="120" height="120" />
-    <div class="video-publisher-hidden video-publisher-possible-stills">
-        {% for still in assets %}
-            <span class="video-publisher-possible-still">{{ still['url'] }}</span>
-        {% endfor %}
-    </div>
+    <img class="attachment-60x60 size-60x60 video-publisher-thumbnail-stills" src="{{ poster }}" width="120" height="120" data-stills='{{ assets|json_encode(constant('JSON_HEX_QUOT')) }}' />
     <span class="video-publisher-ml-2">{{ duration }}</span>
 </div>
