Added chart for data streamed and fixed a few bugs

--- a/plugin/views/admin/upload.html.twig
+++ b/plugin/views/admin/upload.html.twig
@@ -29,7 +29,7 @@
                     <div class="progress-bar" role="progressbar" style="width: 0;"></div>
                 </div>
                 <div class="uploading-text">Uploading: <span id="uploadingTitle"></span></div>
-                <button id="btnCancelUpload" class="btn">Cancel upload</button>
+                <button id="btnCancelUpload" class="btn btn-danger">Cancel upload</button>
             </div>
             <div class="phase-done">
 
