--- a/plugin/views/admin/dashboard/api-dashboard.html.twig
+++ b/plugin/views/admin/dashboard/api-dashboard.html.twig
@@ -14,12 +14,22 @@
                         <span>{{ (stats['streaming'] / 1e+9) | round(3) }} GB / {{ (subscription_limit['streaming_limit'] / 1e+9) | round(3) }} GB</span>
                     </div>
                 </div>
-                <div class="video-publisher-mt-2">
+                <div>
+                    <div class="video-publisher-mb-2 video-publisher-flex video-publisher-flex-end">
+                        <a href="#" id="videoPublisherChartToggleViews" class="btn btn-primary">Views</a>
+                        <a href="#" id="videoPublisherChartToggleData" class="btn btn-inactive video-publisher-ml-2">Data</a>
+                    </div>
                     <canvas id="videoPublisherViewsChart"></canvas>
+                    <canvas style="display: none;" id="videoPublisherDataChart"></canvas>
                 </div>
                 <div id="videoPublisherStreamingViews">
                     {% for view_row in streaming_stats['views']['totalByDay'] %}
                         <span data-key="{{ view_row['date'] }}" data-value="{{ view_row['views'] }}"/>
+                    {% endfor %}
+                </div>
+                <div id="videoPublisherStreamingData">
+                    {% for view_row in streaming_stats['data']['totalByDay'] %}
+                        <span data-key="{{ view_row['date'] }}" data-value="{{ view_row['bytes'] }}"/>
                     {% endfor %}
                 </div>
             {% endif %}
