--- a/scss/_admin.scss
+++ b/scss/_admin.scss
@@ -39,6 +39,11 @@
     border-color: #d16767;
   }
 
+  .btn-inactive {
+    background-color: #c9b9ec;
+    border-color: #c9b9ec;
+  }
+
   p.submit {
     margin-top: 0;
     padding-bottom: 0;
@@ -57,6 +62,10 @@
 
 .video-publisher-flex {
   display: flex;
+}
+
+.video-publisher-flex-end {
+  justify-content: flex-end;
 }
 
 .video-publisher-hidden {
