--- a/scss/isset-video-publisher.scss
+++ b/scss/isset-video-publisher.scss
@@ -1,4 +1,6 @@
 @import '~video.js/dist/video-js.css';
+@import '~@silvermine/videojs-chromecast/dist/silvermine-videojs-chromecast.css';
+@import '~@silvermine/videojs-airplay/dist/silvermine-videojs-airplay.css';
 
 @import 'video';
 @import 'admin';
