--- a/plugin/views/admin/upload.html.twig
+++ b/plugin/views/admin/upload.html.twig
@@ -11,12 +11,12 @@
         <div class="upload-container">
             <div class="phase-select">
                 <div class="phase-select-dropzone">
-                    <input accept="video/mp4,video/x-m4v,video/*" type="file">
+                    <input multiple accept="video/mp4,video/x-m4v,video/*" type="file">
                     <div class="text-wrapper">
                         <span class="dashicons dashicons-download download-icon"></span>
                     </div>
                     <div class="text-wrapper">
-                        <p>Drop a single file here (4.3GB max) or <u><b>browse</b></u> your computer.</p>
+                        <p>Drop a one or more files here (4.3GB max) or <u><b>browse</b></u> your computer.</p>
                     </div>
                 </div>
                 <button class="btn">Upload</button>
