--- a/plugin/views/admin/thumbnail-column.html.twig
+++ b/plugin/views/admin/thumbnail-column.html.twig
@@ -1,3 +1,8 @@
 <div class="video-publisher-flex">
     <img class="video-publisher-thumbnail-stills" src="{{ poster }}" data-preview="{{ preview }}" data-stills='{{ assets|json_encode(constant('JSON_HEX_QUOT')) }}' />
+    {% if preview %}
+        <video style="display: none" class="video-publisher-preview-video" muted loop>
+            <source src="{{ preview }}">
+        </video>
+    {% endif %}
 </div>
