Updated multiple elements

--- a/plugin/views/admin/dashboard/api-dashboard.html.twig
+++ b/plugin/views/admin/dashboard/api-dashboard.html.twig
@@ -1,49 +1,53 @@
 <div class="video-publisher-admin">
     {% if isLoggedIn %}
-        <h2 class="video-publisher-mb-0">{{ __('Logged in as %s', 'isset-video-publisher')|format(user.username) }}</h2>
-        <p class="video-publisher-m-0"><a target="_blank" href="{{ isset_video_url }}">{{ __('isset.video') }}</a></p>
-
-        <div class="video-publisher-flex" style="flex-direction: column">
+        <div class="video-publisher-flex" style="flex-direction: row; justify-content: space-between">
             {% if stats %}
-                <div>
-                    <div class="video-publisher-mt-2">
-                        <span class="video-publisher-bold">Storage used: </span>
-                        <span>{{ (stats['storage'] / 1e+9) | round(3) }} GB / {{ (subscription_limit['storage_limit'] / 1e+9) | round(3) }} GB</span>
-                    </div>
-                    <div>
-                        <span class="video-publisher-bold">Data streamed: </span>
-                        <span>{{ (stats['streaming'] / 1e+9) | round(3) }} GB / {{ (subscription_limit['streaming_limit'] / 1e+9) | round(3) }} GB</span>
-                    </div>
-                    {% if subscription_limit['name'] %}
-                        <div>
-                            <span class="video-publisher-bold">Subscription type: </span>
-                            <span>{{ subscription_limit['name'] }}</span>
+                <div class="video-publisher-flex-1 video-publisher-flex" style="flex-direction: column;">
+                    <div class="video-publisher-flex-1">
+                        <h2 class="video-publisher-mb-0">{{ __('Logged in as %s', 'isset-video-publisher')|format(user.username) }}</h2>
+                        <p class="video-publisher-m-0"><a target="_blank" href="{{ isset_video_url }}">{{ __('isset.video') }}</a></p>
+                        <div class="video-publisher-mt-2">
+                            <span class="video-publisher-bold">Storage used: </span>
+                            <span>{{ (stats['storage'] / 1e+9) | round(3) }} GB / {{ (subscription_limit['storage_limit'] / 1e+9) | round(3) }} GB</span>
                         </div>
-                    {% endif %}
-                </div>
-                <div>
-                    <div class="video-publisher-mb-2 video-publisher-flex video-publisher-flex-end">
-                        <a href="#" id="videoPublisherChartToggleViews" class="btn btn-primary">Views</a>
-                        <a href="#" id="videoPublisherChartToggleData" class="btn btn-inactive video-publisher-ml-2">Data</a>
+                        <div>
+                            <span class="video-publisher-bold">Data streamed: </span>
+                            <span>{{ (stats['streaming'] / 1e+9) | round(3) }} GB / {{ (subscription_limit['streaming_limit'] / 1e+9) | round(3) }} GB</span>
+                        </div>
+                        {% if subscription_limit['name'] %}
+                            <div>
+                                <span class="video-publisher-bold">Subscription type: </span>
+                                <span>{{ subscription_limit['name'] }}</span>
+                            </div>
+                        {% endif %}
                     </div>
-                    <canvas id="videoPublisherViewsChart"></canvas>
-                    <canvas style="display: none;" id="videoPublisherDataChart"></canvas>
+                    <div class="mt-20">
+                        <a id="videoPublisherSyncVideos" class="btn">Sync videos</a>
+                        <a class="btn btn-danger" href="{{ logout_url }}">{{ __("Logout", 'isset-video-publisher') }}</a>
+                    </div>
                 </div>
-                <div id="videoPublisherStreamingViews">
-                    {% for view_row in streaming_stats['views']['totalByDay'] %}
-                        <span data-key="{{ view_row['date'] }}" data-value="{{ view_row['views'] }}"/>
-                    {% endfor %}
-                </div>
-                <div id="videoPublisherStreamingData">
-                    {% for view_row in streaming_stats['data']['totalByDay'] %}
-                        <span data-key="{{ view_row['date'] }}" data-value="{{ view_row['bytes'] }}"/>
-                    {% endfor %}
+                <div class="video-publisher-flex-1">
+                    <div class="">
+                        <div class="video-publisher-mb-2 video-publisher-flex video-publisher-flex-end">
+                            <a href="#" id="videoPublisherChartToggleViews" class="btn btn-primary">Views</a>
+                            <a href="#" id="videoPublisherChartToggleData" class="btn btn-inactive video-publisher-ml-2">Data</a>
+                        </div>
+                        <canvas id="videoPublisherViewsChart"></canvas>
+                        <canvas style="display: none;" id="videoPublisherDataChart"></canvas>
+                    </div>
+                    <div id="videoPublisherStreamingViews">
+                        {% for view_row in streaming_stats['views']['totalByDay'] %}
+                            <span data-key="{{ view_row['date'] }}" data-value="{{ view_row['views'] }}"/>
+                        {% endfor %}
+                    </div>
+                    <div id="videoPublisherStreamingData">
+                        {% for view_row in streaming_stats['data']['totalByDay'] %}
+                            <span data-key="{{ view_row['date'] }}" data-value="{{ view_row['bytes'] }}"/>
+                        {% endfor %}
+                    </div>
                 </div>
             {% endif %}
         </div>
-
-        <a class="btn btn-danger mt-20" href="{{ logout_url }}">{{ __("Logout", 'isset-video-publisher') }}</a>
-
     {% else %}
         <a class="btn mt-20" href="{{ login_url }}">Login to isset.video</a>
     {% endif %}
