Added the option to also upload to archive

--- a/plugin/views/admin/upload.html.twig
+++ b/plugin/views/admin/upload.html.twig
@@ -19,6 +19,10 @@
                         <p>Drop a one or more files here (4.3GB max) or <u><b>browse</b></u> your computer.</p>
                     </div>
                 </div>
+                <div style="margin-bottom: 20px">
+                    <input type="checkbox" id="addToArchive" />
+                    <label for="addToArchive">Add uploaded files to archive</label>
+                </div>
                 <button class="btn">Upload</button>
                 <span id="phase-select-file"></span>
             </div>
