--- a/scss/upload.scss
+++ b/scss/upload.scss
@@ -1,111 +1,159 @@
-.phase-upload {
-  display: none;
+.isset-video-upload-card {
+  background-color: #23282C;
 
-  .uploading-text {
-    margin: 10px 8px 10px 0;
+  &.card {
+    padding: 0;
+
+    .card-header, .card-body, .card-footer {
+      padding: .7em 2em 1em;
+    }
+
+    .card-header {
+      h1 {
+        .dashicons {
+          font-size: 32px;
+          line-height: 0.6;
+          width: 32px;
+        }
+      }
+    }
+
+    .card-body {
+      background-color: #32373B;
+      color: #eee;
+      padding-bottom: 1em;
+      min-height: 200px;
+
+      a {
+        color: #00adff;
+      }
+
+      .text-wrapper {
+        color: #eee;
+      }
+    }
+
+    .card-footer {
+      padding-top: 1.5em;
+      padding-bottom: 1.5em;
+    }
   }
 
   .btn {
     display: inline-block;
     cursor: pointer;
     user-select: none;
-    padding: 0.375rem 0.75rem;
+    padding: 0.5rem 1.5rem;
     font-size: 0.875rem;
     line-height: 1.5;
     border-radius: 0.25rem;
     text-decoration: none;
     color: #fff;
     background-color: #45a164;
-    border-color: #45a164;
+    border-width: 0;
     margin-right: 8px;
+
+    .btn-danger {
+      background-color: #e2505e;
+    }
   }
 
-  .progress {
-    margin-top: 10px;
-    display: flex;
-    height: 1.5rem;
-    overflow: hidden;
-    font-size: .65625rem;
-    border-radius: .25rem;
-    background-color: #c3c5c7;
+  h1 {
+    color: orange;
+  }
 
-    .progress-bar {
+  .phase-upload {
+    display: none;
+
+    hr {
+      border: 0;
+      border-bottom: 1px solid #ccc;
+      margin-top: 0.75rem;
+      margin-bottom: 1rem;
+    }
+
+    .uploading-text {
+      margin: 10px 8px 10px 0;
+    }
+
+    .progress {
+      margin-top: 10px;
+      display: flex;
+      height: 1.5rem;
+      overflow: hidden;
+      font-size: .65625rem;
+      border-radius: .25rem;
+      background-color: #c3c5c7;
+
+      .progress-bar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        overflow: hidden;
+        text-align: center;
+        white-space: nowrap;
+        transition: width .6s ease;
+        color: #fff;
+        background-color: #45a164;
+      }
+    }
+
+    .indicator {
+      display: inline-block;;
+    }
+  }
+
+  .phase-done {
+    display: none;
+    margin-top: 14px;
+  }
+
+  .phase-select {
+    .selected-files-container {
+      margin-top: 14px;
+    }
+
+    .phase-select-dropzone {
       display: flex;
       flex-direction: column;
+      align-items: center;
       justify-content: center;
-      overflow: hidden;
-      text-align: center;
-      white-space: nowrap;
-      transition: width .6s ease;
-      color: #fff;
-      background-color: #45a164;
-    }
-  }
 
-  .indicator {
-    display: inline-block;;
-  }
-}
+      margin: 20px 0;
+      height: 200px;
+      border: 2px dashed #a5a5a5;
+      border-radius: 7px;
+      background-color: #383c40;
+      position: relative;
+      color: #eee;
 
-.phase-done {
-  display: none;
-}
+      .text-wrapper {
+        width: 100%;
+        text-align: center;
 
-.phase-select {
-  .btn {
-    display: inline-block;
-    cursor: pointer;
-    user-select: none;
-    padding: 0.375rem 0.75rem;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    text-decoration: none;
-    color: #fff;
-    background-color: #45a164;
-    border-color: #45a164;
-    margin-right: 8px;
-  }
+        p {
+          width: 100%;
+          height: 100%;
+          text-align: center;
+        }
 
-  .phase-select-dropzone {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+        .download-icon {
+          height: 3.75rem;
+          width: 3.75rem;
+          font-size: 3.75rem;
+          margin-bottom: 0.75rem;
+        }
+      }
 
-    margin: 20px 0;
-    height: 200px;
-    border: 2px dashed #a5a5a5;
-    border-radius: 7px;
-    background-color: #f1f1f1;
-    position: relative;
-
-    .text-wrapper {
-      width: 100%;
-      text-align: center;
-
-      p {
+      input {
+        position: absolute;
+        margin: 0;
+        padding: 0;
         width: 100%;
         height: 100%;
-        text-align: center;
+        outline: none;
+        opacity: 0;
       }
-
-      .download-icon {
-        height: 3.75rem;
-        width: 3.75rem;
-        font-size: 3.75rem;
-        margin-bottom: 0.75rem;
-      }
-    }
-
-    input {
-      position: absolute;
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      outline: none;
-      opacity: 0;
     }
   }
 }
