- Removed deprecated stats call + sync videos on returinging to video overview

--- a/plugin/views/admin/upload.html.twig
+++ b/plugin/views/admin/upload.html.twig
@@ -39,7 +39,7 @@
         {% endif %}
     </div>
     <div class="card-footer" style="display: none;">
-        <a class="btn" href="{{ video_url }}">{{ __("Go to videos", 'isset-video-publisher') }}</a>
+        <a id="videoPublisherSyncVideosAfterUpload" class="btn" href="{{ video_url }}">{{ __("Go to videos", 'isset-video-publisher') }}</a>
     </div>
 </div>
 <canvas width=32 height=32 style="display: none;"></canvas>
