--- a/scss/upload.scss
+++ b/scss/upload.scss
@@ -118,9 +118,11 @@
   .phase-select {
     .selected-files-container {
       margin-top: 14px;
+      height: 200px;
     }
 
     .phase-select-dropzone {
+      overflow-y: auto;
       display: flex;
       flex-direction: column;
       align-items: center;
