--- a/scss/isset-video-publisher.scss
+++ b/scss/isset-video-publisher.scss
@@ -6,4 +6,6 @@
 @import 'admin';
 @import 'progressbar';
 @import 'blocks/video-block';
+@import 'blocks/livestream-block';
 @import 'upload';
+@import 'livestream';
