--- a/scss/livestream.scss
+++ b/scss/livestream.scss
@@ -27,3 +27,40 @@
     background-color: #111;
     min-height: 200px;
 }
+
+.isset-video-livestream-video {
+    position: relative;
+    //width: 560px;
+    //height: 315px;
+
+    .vjs-overlay-abs {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        background-color: #111;
+        z-index: 10;
+
+        .vjs-tech {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .text-container {
+                display: table;
+                margin: auto;
+                padding: 20px;
+
+                h1 {
+                    margin-bottom: 10px;
+                }
+
+                p {
+                    font-size: 1.4em;
+                }
+            }
+        }
+
+
+    }
+}
