--- a/scss/upload.scss
+++ b/scss/upload.scss
@@ -116,57 +116,6 @@
       color: orange;
     }
   }
-
-  .phase-select {
-    .selected-files-container {
-      margin-top: 14px;
-      height: 200px;
-    }
-
-    .phase-select-dropzone {
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-
-      margin: 20px 0;
-      height: 200px;
-      border: 2px dashed #a5a5a5;
-      border-radius: 7px;
-      background-color: #383c40;
-      position: relative;
-      color: #eee;
-
-      .text-wrapper {
-        width: 96%;
-        text-align: center;
-
-        p {
-          width: 100%;
-          height: 100%;
-          text-align: center;
-        }
-
-        .download-icon {
-          height: 3.75rem;
-          width: 3.75rem;
-          font-size: 3.75rem;
-          margin-bottom: 0.75rem;
-        }
-      }
-
-      input {
-        position: absolute;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        outline: none;
-        opacity: 0;
-      }
-    }
-  }
 }
 
 .isset-video-upload-widget {
@@ -222,4 +171,65 @@
 .isset-video-progressbar-striped {
   background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
   background-size: 1rem 1rem;
+}
+
+.isset-video-overlay {
+  .phase-select {
+    &.isset-video-image-upload {
+      width: 100%;
+    }
+
+    .selected-files-container {
+      margin-top: 14px;
+    }
+
+    .selected-image-container {
+      margin-top: 14px;
+      width: 80%;
+    }
+
+    .phase-select-dropzone {
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      margin: 20px 0;
+      height: 200px;
+      border: 2px dashed #a5a5a5;
+      border-radius: 7px;
+      background-color: #383c40;
+      position: relative;
+      color: #eee;
+
+      .text-wrapper {
+        width: 96%;
+        text-align: center;
+
+        p {
+          width: 100%;
+          height: 100%;
+          text-align: center;
+        }
+
+        .download-icon {
+          height: 3.75rem;
+          width: 3.75rem;
+          font-size: 3.75rem;
+          margin-bottom: 0.75rem;
+        }
+      }
+
+      input {
+        position: absolute;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        outline: none;
+        opacity: 0;
+      }
+    }
+  }
 }
